--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "it_proger_3",
   "version": "0.1.0",
-  "homepage": "https://Zhandeveloper.github.io/my-fisrt-website-on-React",
+  "homepage": "https://zhandeveloper.github.io/website-for-adding-users-on-React/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
